force-app/main/default/objects/Account/fields/Grupo_Clientes__c.field-meta.xml
<CustomField>
    <fullName>Grupo_Clientes__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Grupo de clientes</label>
    <referenceTo>Grupo_Conta__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>